@@ -192,7 +192,6 @@ func RenderEventNoMessage(eventHandle EvtHandle, renderBuf []byte) (string, erro
 	var bufferUsed, propertyCount uint32
 	err := _EvtRender(0, eventHandle, EvtRenderEventXml, uint32(len(renderBuf)),
 		&renderBuf[0], &bufferUsed, &propertyCount)
-	bufferUsed *= 2 // It returns the number of utf-16 chars.
 	if err == ERROR_INSUFFICIENT_BUFFER {
 		return "", sys.InsufficientBufferError{err, int(bufferUsed)}
 	}
@@ -200,7 +199,12 @@ func RenderEventNoMessage(eventHandle EvtHandle, renderBuf []byte) (string, erro
 		return "", err
 	}
 
-	xml, _, err := sys.UTF16BytesToString(renderBuf[0:bufferUsed])
+	if int(bufferUsed) > len(renderBuf) {
+		return "", fmt.Errorf("Windows EvtRender reported that wrote %d bytes "+
+			"to the buffer, but the buffer can only hold %d bytes",
+			bufferUsed, len(renderBuf))
+	}
+	xml, _, err := sys.UTF16BytesToString(renderBuf[:bufferUsed])
 	return xml, err
 }
 
